fix(combobox): Fix spacing/alignment on select-only combobox without placeholder (#4989)
* add psuedo element to select-only combobox placeholder to maintain spacing/alignment

* fix CirceCI publish-site job

--- a/ui/components/input/base/_index.scss
+++ b/ui/components/input/base/_index.scss
@@ -127,6 +127,11 @@
   &.slds-is-disabled {
     @include input-disabled;
   }
+
+  > span:before {
+    content: '';
+    display: inline-block;
+  }
 }
 
 /**
